stateDiagram-v2
    [*] --> Invisible : Window Window([Frame owner])
    [*] --> Invisible : Window Window([Window owner])
    [*] --> Invisible : Window Window([Window owner], [GraphicsConfiguration gc])

    Invisible --> Invisible : void dispose()
    Invisible --> Invisible : List<Image> getIconImages()
    Invisible --> Invisible : void setIconImage([Image image])
    Invisible --> Invisible : void setIconImages([List icons])
    Invisible --> Invisible : void addNotify()
    Invisible --> Invisible : void setMinimumSize([Dimension minimumSize])
    Invisible --> Invisible : void setSize([Dimension d])
    Invisible --> Invisible : void setSize([int width], [int height])
    Invisible --> Invisible : void setLocation([int x], [int y])
    Invisible --> Invisible : void setLocation([Point p])
    Invisible --> Invisible : void reshape([int x], [int y], [int width], [int height])
    Invisible --> Invisible : void setVisible([boolean b])
    Invisible --> Invisible : void setModalExclusionType([Dialog.ModalExclusionType exclusionType])
    Invisible --> Invisible : Dialog.ModalExclusionType getModalExclusionType()
    Invisible --> Invisible : void addWindowListener([WindowListener l])
    Invisible --> Invisible : void addWindowStateListener([WindowStateListener l])
    Invisible --> Invisible : void addWindowFocusListener([WindowFocusListener l])
    Invisible --> Invisible : void removeWindowListener([WindowListener l])
    Invisible --> Invisible : void removeWindowStateListener([WindowStateListener l])
    Invisible --> Invisible : void removeWindowFocusListener([WindowFocusListener l])
    Invisible --> Invisible : WindowListener[] getWindowListeners()
    Invisible --> Invisible : WindowFocusListener[] getWindowFocusListeners()
    Invisible --> Invisible : WindowStateListener[] getWindowStateListeners()
    Invisible --> Invisible : void getListeners([Class<T> listenerType])
    Invisible --> Invisible : void processEvent([AWTEvent e])
    Invisible --> Invisible : void processWindowEvent([WindowEvent e])
    Invisible --> Invisible : void processWindowFocusEvent([WindowEvent e])
    Invisible --> Invisible : void processWindowStateEvent([WindowEvent e])
    Invisible --> Invisible : void setAlwaysOnTop([boolean alwaysOnTop])
    Invisible --> Invisible : boolean isAlwaysOnTopSupported()
    Invisible --> Invisible : boolean isAlwaysOnTop()
    Invisible --> Invisible : Component getFocusOwner()
    Invisible --> Invisible : Component getMostRecentFocusOwner()
    Invisible --> Invisible : boolean isActive()
    Invisible --> Invisible : boolean isFocused()
    Invisible --> Invisible : Set<AWTKeyStroke> getFocusTraversalKeys([int id])
    Invisible --> Invisible : void setFocusCycleRoot([boolean focusCycleRoot])
    Invisible --> Invisible : boolean isFocusCycleRoot()
    Invisible --> Invisible : Container getFocusCycleRootAncestor()
    Invisible --> Invisible : boolean isFocusableWindow()
    Invisible --> Invisible : boolean getFocusableWindowState()
    Invisible --> Invisible : void setFocusableWindowState([boolean focusableWindowState])
    Invisible --> Invisible : void setAutoRequestFocus([boolean autoRequestFocus])
    Invisible --> Invisible : boolean isAutoRequestFocus()
    Invisible --> Invisible : void addPropertyChangeListener([PropertyChangeListener listener])
    Invisible --> Invisible : void addPropertyChangeListener([String propertyName], [PropertyChangeListener listener])
    Invisible --> Invisible : boolean isValidateRoot()
    Invisible --> Invisible : void postEvent([Event e])
    Invisible --> Invisible : boolean isShowing()
    Invisible --> Invisible : void applyResourceBundle([ResourceBundle rb])
    Invisible --> Invisible : void applyResourceBundle([String rbName])
    Invisible --> Invisible : void setType([Window.Type type])
    Invisible --> Invisible : Window.Type getType()
    Invisible --> Invisible : AccessibleContext getAccessibleContext()
    Invisible --> Invisible : void setLocationRelativeTo([Component c])
    Invisible --> Invisible : void setLocationByPlatform([boolean locationByPlatform])
    Invisible --> Invisible : boolean isLocationByPlatform()
    Invisible --> Invisible : void setBounds([int x], [int y], [int width], [int height])
    Invisible --> Invisible : void setBounds([Rectangle r])
    Invisible --> Invisible : float getOpacity()
    Invisible --> Invisible : void setOpacity([float opacity])
    Invisible --> Invisible : Shape getShape()
    Invisible --> Invisible : void setShape([Shape shape])
    Invisible --> Invisible : Color getBackground()
    Invisible --> Invisible : void setBackground([Color bgColor])
    Invisible --> Invisible : boolean isOpaque()
    Invisible --> Invisible : void paint([Graphics g])
    Invisible --> Invisible : Toolkit getToolkit()
    Invisible --> Invisible : String getWarningString()
    Invisible --> Invisible : Locale getLocale()
    Invisible --> Invisible : InputContext getInputContext()
    Invisible --> Invisible : void setCursor([Cursor cursor])
    Invisible --> Invisible : Window getOwner()
    Invisible --> Invisible : Window[] getOwnedWindows()
    Invisible --> Invisible : BufferStrategy getBufferStrategy()

    Invisible --> Hidden : void pack()
    Invisible --> Visible : void show()

    Hidden --> Hidden : List<Image> getIconImages()
    Hidden --> Hidden : void setIconImage([Image image])
    Hidden --> Hidden : void setIconImages([List icons])
    Hidden --> Hidden : void addNotify()
    Hidden --> Hidden : void pack()
    Hidden --> Hidden : void setMinimumSize([Dimension minimumSize])
    Hidden --> Hidden : void setSize([Dimension d])
    Hidden --> Hidden : void setSize([int width], [int height])
    Hidden --> Hidden : void setLocation([int x], [int y])
    Hidden --> Hidden : void setLocation([Point p])
    Hidden --> Hidden : void reshape([int x], [int y], [int width], [int height])
    Hidden --> Hidden : void setModalExclusionType([Dialog.ModalExclusionType exclusionType])
    Hidden --> Hidden : Dialog.ModalExclusionType getModalExclusionType()
    Hidden --> Hidden : void addWindowListener([WindowListener l])
    Hidden --> Hidden : void addWindowStateListener([WindowStateListener l])
    Hidden --> Hidden : void addWindowFocusListener([WindowFocusListener l])
    Hidden --> Hidden : void removeWindowListener([WindowListener l])
    Hidden --> Hidden : void removeWindowStateListener([WindowStateListener l])
    Hidden --> Hidden : void removeWindowFocusListener([WindowFocusListener l])
    Hidden --> Hidden : WindowListener[] getWindowListeners()
    Hidden --> Hidden : WindowFocusListener[] getWindowFocusListeners()
    Hidden --> Hidden : WindowStateListener[] getWindowStateListeners()
    Hidden --> Hidden : void getListeners([Class<T> listenerType])
    Hidden --> Hidden : void processEvent([AWTEvent e])
    Hidden --> Hidden : void processWindowEvent([WindowEvent e])
    Hidden --> Hidden : void processWindowFocusEvent([WindowEvent e])
    Hidden --> Hidden : void processWindowStateEvent([WindowEvent e])
    Hidden --> Hidden : void setAlwaysOnTop([boolean alwaysOnTop])
    Hidden --> Hidden : boolean isAlwaysOnTopSupported()
    Hidden --> Hidden : boolean isAlwaysOnTop()
    Hidden --> Hidden : Component getFocusOwner()
    Hidden --> Hidden : Component getMostRecentFocusOwner()
    Hidden --> Hidden : boolean isActive()
    Hidden --> Hidden : boolean isFocused()
    Hidden --> Hidden : Set<AWTKeyStroke> getFocusTraversalKeys([int id])
    Hidden --> Hidden : void setFocusCycleRoot([boolean focusCycleRoot])
    Hidden --> Hidden : boolean isFocusCycleRoot()
    Hidden --> Hidden : Container getFocusCycleRootAncestor()
    Hidden --> Hidden : boolean isFocusableWindow()
    Hidden --> Hidden : boolean getFocusableWindowState()
    Hidden --> Hidden : void setFocusableWindowState([boolean focusableWindowState])
    Hidden --> Hidden : void setAutoRequestFocus([boolean autoRequestFocus])
    Hidden --> Hidden : boolean isAutoRequestFocus()
    Hidden --> Hidden : void addPropertyChangeListener([PropertyChangeListener listener])
    Hidden --> Hidden : void addPropertyChangeListener([String propertyName], [PropertyChangeListener listener])
    Hidden --> Hidden : boolean isValidateRoot()
    Hidden --> Hidden : void postEvent([Event e])
    Hidden --> Hidden : boolean isShowing()
    Hidden --> Hidden : void applyResourceBundle([ResourceBundle rb])
    Hidden --> Hidden : void applyResourceBundle([String rbName])
    Hidden --> Hidden : Window.Type getType()
    Hidden --> Hidden : AccessibleContext getAccessibleContext()
    Hidden --> Hidden : void setLocationRelativeTo([Component c])
    Hidden --> Hidden : void setLocationByPlatform([boolean locationByPlatform])
    Hidden --> Hidden : boolean isLocationByPlatform()
    Hidden --> Hidden : void setBounds([int x], [int y], [int width], [int height])
    Hidden --> Hidden : void setBounds([Rectangle r])
    Hidden --> Hidden : void createBufferStrategy([int numBuffers])
    Hidden --> Hidden : void createBufferStrategy([int numBuffers], [BufferCapabilities caps])
    Hidden --> Hidden : BufferStrategy getBufferStrategy()
    Hidden --> Hidden : float getOpacity()
    Hidden --> Hidden : void setOpacity([float opacity])
    Hidden --> Hidden : Shape getShape()
    Hidden --> Hidden : void setShape([Shape shape])
    Hidden --> Hidden : Color getBackground()
    Hidden --> Hidden : void setBackground([Color bgColor])
    Hidden --> Hidden : boolean isOpaque()
    Hidden --> Hidden : void paint([Graphics g])
    Hidden --> Hidden : Toolkit getToolkit()
    Hidden --> Hidden : String getWarningString()
    Hidden --> Hidden : Locale getLocale()
    Hidden --> Hidden : InputContext getInputContext()
    Hidden --> Hidden : void setCursor([Cursor cursor])
    Hidden --> Hidden : Window getOwner()
    Hidden --> Hidden : Window[] getOwnedWindows()

    Hidden --> Visible : void show()
    Hidden --> Visible : void setVisible([boolean b])
    Hidden --> Invisible : void dispose()

    Visible --> Visible : List<Image> getIconImages()
    Visible --> Visible : void setIconImage([Image image])
    Visible --> Visible : void setIconImages([List icons])
    Visible --> Visible : void addNotify()
    Visible --> Visible : void pack()
    Visible --> Visible : void setMinimumSize([Dimension minimumSize])
    Visible --> Visible : void setSize([Dimension d])
    Visible --> Visible : void setSize([int width], [int height])
    Visible --> Visible : void setLocation([int x], [int y])
    Visible --> Visible : void setLocation([Point p])
    Visible --> Visible : void reshape([int x], [int y], [int width], [int height])
    Visible --> Visible : void show()
    Visible --> Visible : void toFront()
    Visible --> Visible : void toBack()
    Visible --> Visible : void setModalExclusionType([Dialog.ModalExclusionType exclusionType])
    Visible --> Visible : Dialog.ModalExclusionType getModalExclusionType()
    Visible --> Visible : void addWindowListener([WindowListener l])
    Visible --> Visible : void addWindowStateListener([WindowStateListener l])
    Visible --> Visible : void addWindowFocusListener([WindowFocusListener l])
    Visible --> Visible : void removeWindowListener([WindowListener l])
    Visible --> Visible : void removeWindowStateListener([WindowStateListener l])
    Visible --> Visible : void removeWindowFocusListener([WindowFocusListener l])
    Visible --> Visible : WindowListener[] getWindowListeners()
    Visible --> Visible : WindowFocusListener[] getWindowFocusListeners()
    Visible --> Visible : WindowStateListener[] getWindowStateListeners()
    Visible --> Visible : void getListeners([Class<T> listenerType])
    Visible --> Visible : void processEvent([AWTEvent e])
    Visible --> Visible : void processWindowEvent([WindowEvent e])
    Visible --> Visible : void processWindowFocusEvent([WindowEvent e])
    Visible --> Visible : void processWindowStateEvent([WindowEvent e])
    Visible --> Visible : void setAlwaysOnTop([boolean alwaysOnTop])
    Visible --> Visible : boolean isAlwaysOnTopSupported()
    Visible --> Visible : boolean isAlwaysOnTop()
    Visible --> Visible : Component getFocusOwner()
    Visible --> Visible : Component getMostRecentFocusOwner()
    Visible --> Visible : boolean isActive()
    Visible --> Visible : boolean isFocused()
    Visible --> Visible : Set<AWTKeyStroke> getFocusTraversalKeys([int id])
    Visible --> Visible : void setFocusCycleRoot([boolean focusCycleRoot])
    Visible --> Visible : boolean isFocusCycleRoot()
    Visible --> Visible : Container getFocusCycleRootAncestor()
    Visible --> Visible : boolean isFocusableWindow()
    Visible --> Visible : boolean getFocusableWindowState()
    Visible --> Visible : void setFocusableWindowState([boolean focusableWindowState])
    Visible --> Visible : void setAutoRequestFocus([boolean autoRequestFocus])
    Visible --> Visible : boolean isAutoRequestFocus()
    Visible --> Visible : void addPropertyChangeListener([PropertyChangeListener listener])
    Visible --> Visible : void addPropertyChangeListener([String propertyName], [PropertyChangeListener listener])
    Visible --> Visible : boolean isValidateRoot()
    Visible --> Visible : void postEvent([Event e])
    Visible --> Visible : boolean isShowing()
    Visible --> Visible : void applyResourceBundle([ResourceBundle rb])
    Visible --> Visible : void applyResourceBundle([String rbName])
    Visible --> Visible : Window.Type getType()
    Visible --> Visible : AccessibleContext getAccessibleContext()
    Visible --> Visible : void setLocationRelativeTo([Component c])
    Visible --> Visible : void setLocationByPlatform([boolean locationByPlatform])
    Visible --> Visible : boolean isLocationByPlatform()
    Visible --> Visible : void setBounds([int x], [int y], [int width], [int height])
    Visible --> Visible : void setBounds([Rectangle r])
    Visible --> Visible : void createBufferStrategy([int numBuffers])
    Visible --> Visible : void createBufferStrategy([int numBuffers], [BufferCapabilities caps])
    Visible --> Visible : BufferStrategy getBufferStrategy()
    Visible --> Visible : float getOpacity()
    Visible --> Visible : void setOpacity([float opacity])
    Visible --> Visible : Shape getShape()
    Visible --> Visible : void setShape([Shape shape])
    Visible --> Visible : Color getBackground()
    Visible --> Visible : void setBackground([Color bgColor])
    Visible --> Visible : boolean isOpaque()
    Visible --> Visible : void paint([Graphics g])
    Visible --> Visible : Toolkit getToolkit()
    Visible --> Visible : String getWarningString()
    Visible --> Visible : Locale getLocale()
    Visible --> Visible : InputContext getInputContext()
    Visible --> Visible : void setCursor([Cursor cursor])
    Visible --> Visible : Window getOwner()
    Visible --> Visible : Window[] getOwnedWindows()

    Visible --> Hidden : void hide()
    Visible --> Hidden : void setVisible([boolean b])
    Visible --> Invisible : void dispose()

    note right of Invisible
        Window is not displayable.
        setType() is valid only in this state.
        createBufferStrategy() is forbidden here.
    end note

    note right of Hidden
        Window is displayable but not visible.
        setType() is forbidden (window is displayable).
        createBufferStrategy() is valid.
        setLocationByPlatform(true) is valid.
    end note

    note right of Visible
        Window is displayable and visible (showing).
        setType() is forbidden.
        createBufferStrategy() is valid.
        setLocationByPlatform(true) throws IllegalComponentStateException.
    end note
